--- a/stil.css
+++ b/stil.css
@@ -9,24 +9,16 @@
                             width: 100%;
                         }
                         .blur-box {
-                            -webkit-backface-visibility: hidden;
-                            -moz-backface-visibility: hidden;
-                            -webkit-transform: translate3d(0, 0, 0);
-                            -moz-transform: translate3d(0, 0, 0);
                             background-color: rgba(50, 50, 50, 0.5);
-                            
                             border: 1px solid rgba(255, 255, 255, 0.8);
+                            -webkit-backdrop-filter: blur(12px);
                             backdrop-filter: blur(12px);
                             padding: 20px;
                             border-radius: 10px;
                             margin: 0 auto;
                             max-width: 600px;
-                        }                    
+                        }                
                         .box{
-                            -webkit-backface-visibility: hidden;
-                            -moz-backface-visibility: hidden;
-                            -webkit-transform: translate3d(0, 0, 0);
-                            -moz-transform: translate3d(0, 0, 0);
                             flex-direction: column;
                             text-decoration: none;
                             height: 200px;
